--- a/ClavijoReyes-117024.ipynb
+++ b/ClavijoReyes-117024.ipynb
@@ -4,15 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Taller#1-Programación\n",
-    "Jorge Enrique Clavijo Reyes - 117024"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. Sin utilizar el comando abs, escribir un programa que calcule e imprima el valor absoluto de cualquier número (sea entero o decimal)."
+    "Sin utilizar el comando abs, escribir un programa que calcule e imprima el valor absoluto de cualquier número (sea entero o decimal)."
    ]
   },
   {
@@ -45,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Leer un número entero y escribirlo en reversa. Por ejemplo, 461975 será 579164. No utilizar comandos de ordenamiento."
+    "Leer un número entero y escribirlo en reversa. Por ejemplo, 461975 será 579164. No utilizar comandos de ordenamiento."
    ]
   },
   {
@@ -83,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Leer un número entero de 3 dígitos y determinar si contiene el dígito 8."
+    "Leer un número entero de 3 dígitos y determinar si contiene el dígito 8."
    ]
   },
   {
@@ -109,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Leer un número entero positivo y determinar la suma de sus dígitos pares. Por ejemplo, en el número 124, los dígitos pares son el 2 y el 4 y su suma vale 6."
+    "Leer un número entero positivo y determinar la suma de sus dígitos pares. Por ejemplo, en el número 124, los dígitos pares son el 2 y el 4 y su suma vale 6."
    ]
   },
   {
@@ -133,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Leer un número entero y determinar el número de cincos que están consecutivos en un número. Por ejemplo, en\n",
+    "Leer un número entero y determinar el número de cincos que están consecutivos en un número. Por ejemplo, en\n",
     "5512355551 hay 6 cincos consecutivos. Ahora, en 234555234512 solo hay 3 cincos consecutivos."
    ]
   },
@@ -182,7 +174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. Leer un número entero y determinar si la suma de sus dígitos es un número de Fibonacci."
+    "Leer un número entero y determinar si la suma de sus dígitos es un número de Fibonacci."
    ]
   },
   {
@@ -218,7 +210,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "7. Leer un número entero positivo y determine si existen en el número dígitos repetidos. Reporte cuales son los dígitos repetidos."
+    "Leer un número entero positivo y determine si existen en el número dígitos repetidos. Reporte cuales son los dígitos repetidos."
    ]
   },
   {
@@ -255,7 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "8. Iterar a través de los primeros cien enteros positivos, buscando los múltiplos de 3 e imprimiendo y almacenándolos en una lista hasta encontrar los primeros 15 de ellos. Una vez encontrados, continuar iterando en busca de los múltiplos de 4 y almacenarlos en otra lista."
+    "Iterar a través de los primeros cien enteros positivos, buscando los múltiplos de 3 e imprimiendo y almacenándolos en una lista hasta encontrar los primeros 15 de ellos. Una vez encontrados, continuar iterando en busca de los múltiplos de 4 y almacenarlos en otra lista."
    ]
   },
   {
@@ -296,7 +288,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "9. Hacer un programa que lea las coordenadas (x1,y1,r1) y (x2,y2,r2) que corresponden al centro y al radio de dos círculos.\n",
+    "Hacer un programa que lea las coordenadas (x1,y1,r1) y (x2,y2,r2) que corresponden al centro y al radio de dos círculos.\n",
     "Lea un punto de coordenadas (a,b). Determina si (a,b) está contenido: a) dentro del círculo 1; b) dentro del círculo 2;\n",
     "c) dentro de ambos círculos; d) fuera de ambos círculos. Recordemos que el círculo es el lugar geométrico de los puntos\n",
     "del plano cuya distancia a otro punto fijo, llamado centro, es menor o igual que una cantidad constante, llamada radio."
@@ -351,7 +343,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "10. Sin utilizar el método .upper() para cadenas, escribir un programa que lea una cadena de texto y la imprima en\n",
+    "Sin utilizar el método .upper() para cadenas, escribir un programa que lea una cadena de texto y la imprima en\n",
     "mayúscula. Tenga en cuenta que el programa debe aceptar las letras con tilde, la ñ y la ü."
    ]
   },
@@ -397,7 +389,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "11. Escribir un programa que reciba una cadena de texto y reporte:\n",
+    "Escribir un programa que reciba una cadena de texto y reporte:\n",
     "a) cuántas letras vocales en mayúscula se entraron;\n",
     "b) cuántas letras con tilde se entraron (minúsculas y mayúsculas);\n",
     "c) cuántos dígitos se entraron,\n",
@@ -486,15 +478,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "12. Hacer un programa que lea dos palabras (podrían estar en mayúscula o minúscula) y determine cual está primero en\n",
-    "el diccionario. El programa debe soportar letras con tilde, la ü y la ñ."
+    "Hacer un programa que lea dos palabras (podrían estar en mayúscula o minúscula) y determine cual está primero en el diccionario. El programa debe soportar letras con tilde, la ü y la ñ."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Escriba una palabra: hola\n",
+      "Escriba otra palabra: holi\n",
+      "hola está primero en el diccionario\n"
+     ]
+    }
+   ],
    "source": [
     "#Se exije que el usuario introduzca dos palabras\n",
     "\n",
@@ -585,7 +586,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "13. Escribir un programa que lea una cadena de texto y la imprima como un triángulo. Por ejemplo, si la cadena entrada\n",
+    "Escribir un programa que lea una cadena de texto y la imprima como un triángulo. Por ejemplo, si la cadena entrada\n",
     "es: \"Es una locura odiar a todas las rosas porque una te pinchó: renunciar a todos tus sueños porque uno de ellos no\n",
     "se realizó - El Principito\""
    ]
@@ -613,7 +614,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "14. Leer una cadena de texto y organice alfabéticamente cada una de las letras que la componen, repitiendo cada una\n",
+    "Leer una cadena de texto y organice alfabéticamente cada una de las letras que la componen, repitiendo cada una\n",
     "tantas veces como se encuentra. Por ejemplo, la cadena ‘tarea importante’ será ‘aaaeeimnoprrttt’. (Note que no se\n",
     "incluyen los espacios)."
    ]
@@ -654,7 +655,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "15. Leer una lista de números enteros y enumerar cuantos elementos se repiten exactamente dos veces. Utilizar para tal\n",
+    "Leer una lista de números enteros y enumerar cuantos elementos se repiten exactamente dos veces. Utilizar para tal\n",
     "fin el método count() de listas."
    ]
   },
@@ -688,7 +689,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "16. Leer una lista de números ya ordenados de forma ascendente y verificar\n",
+    "Leer una lista de números ya ordenados de forma ascendente y verificar\n",
     "que dicha lista está ordenada. Luego, leer un número e insertarlo en la\n",
     "lista en la posición que le corresponde a dicho número."
    ]
@@ -741,7 +742,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "17. Leer una lista y determinar cuál es el segundo elemento más grande de\n",
+    "Leer una lista y determinar cuál es el segundo elemento más grande de\n",
     "dicha lista. No utilice ningún tipo de algoritmo de ordenamiento para\n",
     "realizar este ejercicio."
    ]
@@ -769,50 +770,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "18. Leer una matriz cuadrada A, obtener su matriz triangular superior \n",
+    "Leer una matriz cuadrada A, obtener su matriz triangular superior \n",
     "asociada U y determinar qué fila de U contiene la mayor cantidad de unos."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ingrese una matriz cuadrada: [[1,1,1],[3,4,5],[1,4,6]]\n",
-      "la matriz triangular superior es:  [[1, 1, 1], [0, 4, 5], [0, 0, 6]]\n",
-      "y la fila con mayor cantidad de unos es:  [1, 1, 1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Se realizar un try except para evitar que el usuario introduzca elementos\n",
-    "#diferentes a una matriz cuadrada y de números enteros\n",
-    "\n",
-    "while True:\n",
-    "    try:\n",
-    "        L= eval(input('Ingrese una matriz cuadrada: '))\n",
-    "        if type(L) is list:\n",
-    "            for fila in L:\n",
-    "                if type(fila) is list:\n",
-    "                    for entrada in fila:\n",
-    "                        if type(entrada) is not int:\n",
-    "                            raise Exception\n",
-    "                else:\n",
-    "                    raise Exception\n",
-    "        else:\n",
-    "            raise Exception\n",
-    "        \n",
-    "        for Fila in L:\n",
-    "            if len(Fila) != len(L[0]) :\n",
-    "                raise Exception\n",
-    "        break     \n",
-    "    except:\n",
-    "        print('Debe ser una matriz cuadrada y de entradas enteras.')\n",
-    "            \n",
+    "L=eval(input('Ingrese una matriz cuadrada: '))\n",
+    "   \n",
     "\n",
     "a=-1\n",
     "#Se creará un ciclo for para cambiar los índices debajo de la diagonal por\n",
@@ -823,41 +792,16 @@
     "    a+=1                                #i = columnas\n",
     "    for j in range(1+a,len(L)):         #j = filas\n",
     "        L[j][i]=0\n",
-    "       \n",
-    "       \n",
-    "#Se agrega una lista vacía que será aquella donde se guardarán el número de\n",
-    "#veces que se repiten el 1 en una fila, y el índice será el homólogo en la\n",
-    "#Lista L\n",
     "        \n",
-    "L2=[]\n",
-    "       \n",
-    "for columna in range(0,len(L)):\n",
-    "    c=0\n",
-    "    for fila in range(0,len(L)):\n",
-    "        \n",
-    "        if L[columna][fila]==1:\n",
-    "            c+=1\n",
-    "        else:\n",
-    "            continue\n",
-    "    L2.append(c)\n",
     "    \n",
-    "#Se encuentra el máximo de la lista L2, se encuentra su índice, y la\n",
-    "#infomación de este índice se imprime en la lista L, que es la que posee las\n",
-    "#filas de la matriz diagonal\n",
-    "    \n",
-    "L2.append(0) #Esto es un pequeño ajuste que se hace para cuando la cantidad de\n",
-    "#es i+1 el rango\n",
-    "\n",
-    "print('la matriz triangular superior es: ', L)\n",
-    "print('y la fila con mayor cantidad de unos es: ', L[L2[max(L2)]])\n",
-    "   "
+    "print(L)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "19. Leer una lista e identifique la sublista más larga dentro de dicha \n",
+    "Leer una lista e identifique la sublista más larga dentro de dicha \n",
     "lista que se encuentra ordenada ascendentemente. Por ejemplo, en la lista \n",
     "[5, 6, 5, 1, 2, 6, 9, 2, 4, 1] la mayor sublista ordenada es la \n",
     "[1, 2, 6, 9]."
@@ -926,8 +870,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "20. Hacer un programa que lea una matriz y la rote 90 grados en sentido \n",
-    "    antihorario. Imprimir la matriz resultante. \n",
+    "Hacer un programa que lea una matriz y la rote 90 grados en sentido  antihorario. Imprimir la matriz resultante. \n",
     "Repita el mismo ejercicio utilizando el módulo numpy."
    ]
   },
@@ -937,48 +880,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Se realiza un try except para evitar que el usuario introduzca elementos\n",
-    "#que no sean una matriz, o si bien no tengan números enteros\n",
-    "\n",
-    "import numpy as np\n",
-    "\n",
-    "while True:\n",
-    "    try:\n",
-    "        L= eval(input('Ingrese una matriz: '))\n",
-    "        if type(L) is list:\n",
-    "            for fila in L:\n",
-    "                if type(fila) is list:\n",
-    "                    for entrada in fila:\n",
-    "                        if type(entrada) is not int:\n",
-    "                            raise Exception\n",
-    "                else:\n",
-    "                    raise Exception\n",
-    "        else:\n",
-    "            raise Exception\n",
-    "        \n",
-    "        for Fila in L:\n",
-    "            if len(Fila) != len(L[0]) :\n",
+    "def Leer_matriz():\n",
+    "    '''\n",
+    "    lee una matriz que contenga listas,que sus elementos sean enteros y que\n",
+    "    sea de cualquier longitud\n",
+    "    '''\n",
+    "    while True:\n",
+    "        try:\n",
+    "            Matriz= eval(input('Ingrese una matriz: '))\n",
+    "            if type(Matriz) is list:\n",
+    "                for fila in Matriz:\n",
+    "                    if type(fila) is list:\n",
+    "                        for entrada in fila:\n",
+    "                            if type(entrada) is not int:\n",
+    "                                raise Exception\n",
+    "                    else:\n",
+    "                        raise Exception\n",
+    "            else:\n",
     "                raise Exception\n",
-    "        break     \n",
-    "    except:\n",
-    "        print('Debe ser una matriz de numeros enteros con todas sus filas\\\n",
-    " y columnas de igual longitud.')\n",
     "            \n",
-    "\n",
-    "\n",
-    "#Con el siguiente comnando se imprimirá la matriz rotada dada una serie\n",
-    "        \n",
-    "print('La matriz rotada 90 grados es : ')\n",
-    "for Columna in range(len(L[0])) :               \n",
-    "    for Fila in range(len(L)) :\n",
-    "        print('{:8}'.format(L[Fila][len(L[0])-Columna-1]),\\\n",
-    "end = ' ')\n",
-    "    print()\n",
-    "    \n",
-    "    \n",
-    "a=np.rot90(L)\n",
-    "print('la matriz rotada 90 grados es: ')\n",
-    "print(a)\n"
+    "            for Fila in Matriz:\n",
+    "                if len(Fila) != len(Matriz[0]) :\n",
+    "                    raise Exception\n",
+    "            break     \n",
+    "        except:\n",
+    "            print('Debe ser una matriz de numeros enteros con todas sus filas\\\n",
+    " iguales.')\n",
+    "            \n",
+    "    return Matriz"
    ]
   }
  ],
