--- a/Clavijo Reyes-117024.ipynb
+++ b/Clavijo Reyes-117024.ipynb
@@ -756,14 +756,8 @@
     "print('El segundo elemento más grande de la lista es: ',max(L))"
    ]
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Leer una matriz cuadrada A, obtener su matriz triangular superior \n",
-    "asociada U y determinar qué fila de U contiene la mayor cantidad de unos."
-   ]
-  },
+{
+ "cells": [
   {
    "cell_type": "code",
    "execution_count": null,
@@ -782,11 +776,55 @@
     "    a+=1                                #i = columnas\n",
     "    for j in range(1+a,len(L)):         #j = filas\n",
     "        L[j][i]=0\n",
+    "       \n",
+    "       \n",
+    "#Se agrega una lista vacía que será aquella donde se guardarán el número de\n",
+    "#veces que se repiten el 1 en una fila, y el índice será el homólogo en la\n",
+    "#Lista L\n",
     "        \n",
+    "L2=[]\n",
+    "       \n",
+    "for columna in range(0,len(L)):\n",
+    "    c=0\n",
+    "    for fila in range(0,len(L)):\n",
+    "        \n",
+    "        if L[columna][fila]==1:\n",
+    "            c+=1\n",
+    "        else:\n",
+    "            continue\n",
+    "    L2.append(c)\n",
     "    \n",
-    "print(L)"
+    "#Se encuentra el máximo de la lista L2, se encuentra su índice, y la\n",
+    "#infomación de este índice se imprime en la lista L, que es la que posee las\n",
+    "#filas de la matriz diagonal\n",
+    "\n",
+    "print('la matriz triangular superior es: ', L)\n",
+    "print('La fila con mayor cantidad de unos es: ', L[L2[max(L2)]])"
    ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+},
   {
    "cell_type": "markdown",
    "metadata": {},
