--- a/Clavijo Reyes-117024.ipynb
+++ b/Clavijo Reyes-117024.ipynb
@@ -9,9 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Digite un número -10\n",
+      "Su numero es:  -10\n",
+      "Su valor absoluto es:  10\n"
+     ]
+    }
+   ],
    "source": [
     "x =int(input(\"Digite un número \"))\n",
     "print(\"Su numero es: \",x)\n",
@@ -756,8 +766,14 @@
     "print('El segundo elemento más grande de la lista es: ',max(L))"
    ]
   },
-{
- "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Leer una matriz cuadrada A, obtener su matriz triangular superior \n",
+    "asociada U y determinar qué fila de U contiene la mayor cantidad de unos."
+   ]
+  },
   {
    "cell_type": "code",
    "execution_count": null,
@@ -801,30 +817,7 @@
     "print('la matriz triangular superior es: ', L)\n",
     "print('La fila con mayor cantidad de unos es: ', L[L2[max(L2)]])"
    ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
   },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.7"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2
-},
   {
    "cell_type": "markdown",
    "metadata": {},
@@ -898,7 +891,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hacer un programa que lea una matriz y la rote 90 grados en sentido antihorario. Imprimir la matriz resultante. \n",
+    "Hacer un programa que lea una matriz y la rote 90 grados en sentido  antihorario. Imprimir la matriz resultante. \n",
     "Repita el mismo ejercicio utilizando el módulo numpy."
    ]
   },
@@ -908,34 +901,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Leer_matriz():\n",
-    "    '''\n",
-    "    lee una matriz que contenga listas,que sus elementos sean enteros y que\n",
-    "    sea de cualquier longitud\n",
-    "    '''\n",
-    "    while True:\n",
-    "        try:\n",
-    "            Matriz= eval(input('Ingrese una matriz: '))\n",
-    "            if type(Matriz) is list:\n",
-    "                for fila in Matriz:\n",
-    "                    if type(fila) is list:\n",
-    "                        for entrada in fila:\n",
-    "                            if type(entrada) is not int:\n",
-    "                                raise Exception\n",
-    "                    else:\n",
-    "                        raise Exception\n",
-    "            else:\n",
-    "                raise Exception\n",
-    "            \n",
-    "            for Fila in Matriz:\n",
-    "                if len(Fila) != len(Matriz[0]) :\n",
+    "#Se realiza un try except para evitar que el usuario introduzca elementos\n",
+    "#que no sean una matriz, o si bien no tengan números enteros\n",
+    "import numpy as np\n",
+    "\n",
+    "while True:\n",
+    "    try:\n",
+    "        L= eval(input('Ingrese una matriz: '))\n",
+    "        if type(L) is list:\n",
+    "            for fila in L:\n",
+    "                if type(fila) is list:\n",
+    "                    for entrada in fila:\n",
+    "                        if type(entrada) is not int:\n",
+    "                            raise Exception\n",
+    "                else:\n",
     "                    raise Exception\n",
-    "            break     \n",
-    "        except:\n",
-    "            print('Debe ser una matriz de numeros enteros con todas sus filas\\\n",
-    " iguales.')\n",
+    "        else:\n",
+    "            raise Exception\n",
+    "        \n",
+    "        for Fila in L:\n",
+    "            if len(Fila) != len(L[0]) :\n",
+    "                raise Exception\n",
+    "        break     \n",
+    "    except:\n",
+    "        print('Debe ser una matriz de numeros enteros con todas sus filas\\\n",
+    " y columnas de igual longitud.')\n",
     "            \n",
-    "    return Matriz"
+    "\n",
+    "\n",
+    "#Con el siguiente comnando se imprimirá la matriz rotada dada una serie\n",
+    "        \n",
+    "print('La matriz rotada 90 grados es : ')\n",
+    "for Columna in range(len(L[0])) :               \n",
+    "    for Fila in range(len(L)) :\n",
+    "        print('{:8}'.format(L[Fila][len(L[0])-Columna-1]),\\\n",
+    "end = ' ')\n",
+    "    print()\n",
+    "    \n",
+    "    \n",
+    "a=np.rot90(L)\n",
+    "print('la matriz rotada 90 grados es: ')\n",
+    "print(a)"
    ]
   }
  ],
